Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends[14] = 'some value'"
+    "friends[14] = 'some value'\n"
    ]
   },
   {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,10 +313,11 @@
        "{'name': 'Friends',\n",
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 236}"
+       " 'no_of_episodes': 236,\n",
+       " 14: 'some value'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
